# zero1iz3d

./: .gitignore  3d_engine.dsp  3ds.cpp  3ds.h  3ds_format.cpp  3ds_format.h  CBillBoard.cpp  CBillBoard.h  CCamera.cpp  CCamera.h  CDebug.cpp  CDebug.h  CFog.cpp  CFog.h  CMakeLists.txt  CModel.cpp  CModel.h  COpenGL.cpp  COpenGL.h  CParticle.cpp  CParticle.h  CSprite.cpp  CSprite.h  CText.cpp  CText.h  CTexture.cpp  CTexture.h  CTimer.cpp  CTimer.h  Geometry.cpp  Geometry.h  ProjectHome.md  main.cpp  main.h
